# tensorflowAgnosticInferenceLibrary

./: README.md
build_env/: Dockerfile  build.sh  how_to_build.txt  how_to_run.txt
build_env/tx2/: PrepareTfBuild.sh
src/: CMakeLists.txt  CMakeLists.txt~
src/inference_opencv/: CMakeLists.txt  ObjectDetection.cpp  testOpenCV_tensorflow.cpp
src/tf_inference_lib/: BUILD  CMakeLists.txt  IInferenceEngine.h  README.md  cTfInference.cpp  cTfInference.hpp  main.cc
tensorflow/contrib/cmake/: CMakeLists.txt  tf_inference_lib.cmake
tensorflow/examples/tf_inference_lib/: IInferenceEngine.h  cInferenceEngineFactory.cpp  cTfInference.hpp  main.cc
tf_inference_lib/: cTfInference.cpp  main.cc  main.cc~
